# homebank-report

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: build.yml
homebank_report/: account.py  account_report.py  category.py  currency.py  date_utils.py  graph.py  operation.py  operation_set.py  options.py  pie_chart.py  property.py  test_account.py  test_account_report.py  test_category.py  test_currency.py  test_date_utils.py  test_graph.py  test_operation.py  test_operation_set.py  test_options.py  test_property.py
homebank_report/notifications/: notifications.py  test_notifications.py
