[tool.poetry]
name = "homebank-report"
version = "0.1.0"
description = ""
authors = ["José Ignacio Amelivia Santiago <ohcan2@gmail.com>"]
readme = "README.md"
packages = [{include = "homebank_report"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.2"
matplotlib = "^3.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
