[tool.poetry]
name = "homebank-report"
version = "0.1.0"
description = ""
authors = ["José Ignacio Amelivia Santiago <ohcan2@gmail.com>"]
readme = "README.md"
packages = [{include = "homebank_report"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.2"
matplotlib = "^3.8.0"
requests = "^2.31.0"
pyaml = "^23.9.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
